<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <string name="Nome">Nome</string>
    <string name="Telefone">Telefone</string>
    <string name="Endereco">Endereço</string>
    <string name="Site">Site</string>
    <string name="Nota">Nota</string>
    <string name="Gravar">Gravar</string>
    <string name="Foto">Foto do aluno</string>
    <string name="Novo">Novo</string>
    <string name="Mapa">Mapa</string>
    <string name="Sincronizar">Sincronizar</string>
    <string name="Preferências">Preferências</string>
    <string name="MaisOpcoes">Mais Opções</string>
    <string name="BaixarProvas">Baixar Provas</string>
    

</resources>
