<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    	xmlns:tools="http://schemas.android.com/tools"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <ImageView
	        android:id="@+id/imagem"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:contentDescription="@string/Foto"
	        android:src="@drawable/batore" 
	        android:layout_gravity="center_horizontal"
	        />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Nome"/>
	
	    <EditText
	        android:id="@+id/nome"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Telefone" />
	
	    <EditText
	        android:id="@+id/telefone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Endereco" />
	
	    <EditText
	        android:id="@+id/endereco"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPostalAddress" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Site" />
	
	    <EditText
	        android:id="@+id/site"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:inputType="textUri"
	        />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Nota" />
	
	    <SeekBar
	        android:id="@+id/nota"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <Button 
	        android:id="@+id/botao"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Gravar"
	        />
	
</LinearLayout>
</ScrollView>